Fixed issue causing horizontal scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ button:focus-visible {
 }
 
 .navContainer {
-  width: 100vw;
+  width: 100%;
   top: 0;
   left: 0;
   position: sticky;
